// stores are the main users
Table stores {
    store_id integer [PK]
    store_name varchar
    owner varchar
}

// reference tables
Table regions {
    region_id integer [PK]
    region_name varchar 
}

Table subcategories {
    subcategory_id integer [PK]
    name varchar
    category_id integer
}

Table categories {
    category_id integer [PK]
    name varchar
}

Table products {
    product_id integer [PK]
    subcategory_id integer
    product_name varchar
    cost_price decimal[10,2]
    selling_price decimal[10,2]
}

// each of these entities are tied to the store
Table customers {
    customer_id integer [PK]
    store_id integer
    first_name varchar
    last_name varchar
    region_id integer
    created_date date 
}

Table stock {
    stock_id integer [PK]
    store_id integer
    product_id integer
    quantity integer
    stock_date date
    discontinued_date date [null]
}

Table order_items {
    order_item_id integer [PK]
    order_id integer
    product_id integer
    quantity integer
}

Table orders {
    order_id integer [PK]
    customer_id integer
    order_date date
}


Ref: stores.store_id < stock.store_id

Ref: subcategories.category_id > categories.category_id

Ref: subcategories.subcategory_id < products.subcategory_id

Ref: stores.store_id < customers.store_id

Ref: products.product_id < stock.product_id

Ref: products.product_id < order_items.product_id

Ref: customers.customer_id < orders.customer_id

Ref: orders.order_id < order_items.order_id

Ref: regions.region_id < customers.region_id